feat: adicina header e home-page

--- a/src/app/sections/home-section/home-section.html
+++ b/src/app/sections/home-section/home-section.html
@@ -1,3 +1,14 @@
 <div class="home-container">
-
+    <img src="/home-page.png" alt="" class="home-page-image">
+    <div class="home-content">
+        <div class="search-input-wrapper">
+            <input type="text" placeholder="Pesquisar por Localidade...">
+            <button>
+                <i class="fa-solid fa-paper-plane"></i>
+            </button>
+        </div>
+    </div>
+    <div class="circle">
+        <i class="fa-solid fa-chevron-down"></i>
+    </div>
 </div>
