--- a/src/app/sections/home-section/home-section.scss
+++ b/src/app/sections/home-section/home-section.scss
@@ -1,3 +1,70 @@
+@use "../../scss/variables" as *;
+
 .home-container {
-    min-height: 71.25vh;
+    .home-page-image {
+        width: 100%;
+        height: 70vh;
+        position: relative;
+    }
+
+    .home-content {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-40%, -50%);
+
+         .search-input-wrapper {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                input {
+                    padding: 1.5rem 2rem;
+                    background-color: #fff;
+                    color: $grey-color;
+                    border: 0;
+                    outline: 0;
+                    width: 45rem;
+                    border-radius: 2.25rem;
+                    font-size: 16px;
+                    position: relative;
+                    height: 70px;
+                }
+
+                button {
+                    border: 0;
+                    background-color: $primary-color;
+                    padding: 1.6rem 1.9rem;
+                    color: #fff;
+                    border-radius: 0 50% 50% 50%;
+                    cursor: pointer;
+                    position: absolute;
+                    right: 0;
+                    width: 70px;
+                    height: 70px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    i {
+                        font-size: 20px;
+                    }
+                }
+            }
+    }
+
+    .circle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        border-radius: 100%;
+        top: 70%;
+        left: 50%;
+        transform: translate(-40%, -50%);
+        width: 4rem;
+        height: 4rem;
+        background-color: $primary-color;
+        color: #fff;
+    }
 }
+
