feat: adiciona neighborhood card and section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-home-section></app-home-section>
+<app-neighborhood-search></app-neighborhood-search>
 <app-footer></app-footer>
