--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -43,7 +43,7 @@ header {
             font-weight: 600;
             border-bottom: 1px solid transparent;
             transition: border-color .3s ease;
-            
+            font-size: 18px;
             &:hover {
                 border-bottom-color: $brown-color;
             }
