--- a/src/app/sections/neighborhood-search/neighborhood-search.html
+++ b/src/app/sections/neighborhood-search/neighborhood-search.html
@@ -1,5 +1,56 @@
-<div>
-    <div class="bar-title"></div>
-    <h1>Busque pelo Bairro</h1>
-    <div class="bar-title"></div>
+<div class="neighborhood-container">
+    <div class="section-title">
+        <div class="bar-title"></div>
+        <h1>Busque pelo Bairro</h1>
+        <div class="bar-title"></div>
+    </div>
+
+    <div class="neighborhood-container-wrapper">
+        <div class="arrow-icon">
+            <i class="fa-solid fa-chevron-left"></i>
+        </div>
+
+        <div class="neighborhood-card-container">
+            <div class="neighborhood-card">
+                <div class="image-wrapper">
+                    <img src="/neighborhood/Campestre.jpeg">
+                </div>
+                <div class="neighborhood-card-content">
+                    <h1>Campestre</h1>
+                    <p>33 Imóveis</p>
+                </div>
+            </div>
+             <div class="neighborhood-card">
+                <div class="image-wrapper">
+                    <img src="/neighborhood/VilaGilda.jpeg">
+                </div>
+                <div class="neighborhood-card-content">
+                    <h1>Vila Gilda</h1>
+                    <p>33 Imóveis</p>
+                </div>
+            </div>
+            <div class="neighborhood-card">
+                <div class="image-wrapper">
+                    <img src="/neighborhood/Campestre.jpeg">
+                </div>
+                <div class="neighborhood-card-content">
+                    <h1>Campestre</h1>
+                    <p>33 Imóveis</p>
+                </div>
+            </div>
+             <div class="neighborhood-card">
+                <div class="image-wrapper">
+                    <img src="/neighborhood/VilaGilda.jpeg">
+                </div>
+                <div class="neighborhood-card-content">
+                    <h1>Vila Gilda</h1>
+                    <p>33 Imóveis</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="arrow-icon">
+            <i class="fa-solid fa-chevron-right"></i>
+        </div>
+    </div>
 </div>
