feat: adiciona recent section

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-home-section></app-home-section>
 <app-neighborhood-search></app-neighborhood-search>
+<app-recents></app-recents>
 <app-footer></app-footer>
