--- a/src/app/sections/neighborhood-search/neighborhood-search.html
+++ b/src/app/sections/neighborhood-search/neighborhood-search.html
@@ -53,4 +53,11 @@
             <i class="fa-solid fa-chevron-right"></i>
         </div>
     </div>
+    <div class="neighborhood-pagination">
+        <div class="pagination-circle"></div>
+        <div class="pagination-circle"></div>
+        <div class="pagination-circle"></div>
+        <div class="pagination-circle"></div>
+        <div class="pagination-circle"></div>
+    </div>
 </div>
