--- a/src/app/sections/recents/recents.html
+++ b/src/app/sections/recents/recents.html
@@ -1,1 +1,44 @@
-<p>recents works!</p>
+<div class="featured-container">
+    <div class="section-title-wrapper">
+        <div>
+            <h1 class="section-title">Imóveis em Destaque</h1>
+            <p class="section-description">Destaques exclusivos para você encontrar o imóvel ideal.</p>
+        </div>
+        <div class="featured-option-buttons">
+            <button>Venda</button>
+            <button>Locação</button>
+        </div>
+    </div>
+
+    <div class="featured-card-container">
+        <div class="featured-card">
+                <img src="./teste.jpg" class="featured-card-image">
+                <div class="featured-card-tag">DESTAQUE</div>
+                <div class="featured-card-content">
+                    <div class="featured-card-value">R$430.932,00</div>
+                    <h2>Apartamento sem Condomínio Vila Gilda</h2>
+
+                    <div class="card-tag-container-wrapper">
+                        <div class="card-tag-container">
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-bed"></i>
+                                <p>4</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-toilet"></i>
+                                <p>1</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-car-side"></i>
+                                <p>2</p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="tag-wrapper">
+                            <i class="fa-solid fa-expand"></i>
+                            <p>77 m²</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
