--- a/src/app/sections/recents/recents.html
+++ b/src/app/sections/recents/recents.html
@@ -16,7 +16,8 @@
                 <div class="featured-card-tag">DESTAQUE</div>
                 <div class="featured-card-content">
                     <div class="featured-card-value">R$430.932,00</div>
-                    <h2>Apartamento sem Condomínio Vila Gilda</h2>
+                    <h1>Apartamento sem Condomínio Vila Gilda</h1>
+                    <h2>Vila Gilda - Santo André</h2>
 
                     <div class="card-tag-container-wrapper">
                         <div class="card-tag-container">
@@ -32,13 +33,123 @@
                                 <i class="fa-solid fa-car-side"></i>
                                 <p>2</p>
                             </div>
+                            <div class="divider"></div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-expand"></i>
+                                <p>77 m²</p>
+                            </div>
                         </div>
-                        </div>
-                        <div class="tag-wrapper">
-                            <i class="fa-solid fa-expand"></i>
-                            <p>77 m²</p>
                         </div>
                     </div>
+                    <div class="featured-card-button-container">
+                        <button class="more-info-button">Mais Informações</button>
+                        <button class="message-button"><i class="fa-regular fa-envelope"></i></button>
+                    </div>
+                    
                 </div>
-            </div>
+                <div class="featured-card">
+                <img src="./teste.jpg" class="featured-card-image">
+                <div class="featured-card-tag">DESTAQUE</div>
+                <div class="featured-card-content">
+                    <div class="featured-card-value">R$430.932,00</div>
+                    <h1>Apartamento sem Condomínio Vila Gilda</h1>
+                    <h2>Vila Gilda - Santo André</h2>
+
+                    <div class="card-tag-container-wrapper">
+                        <div class="card-tag-container">
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-bed"></i>
+                                <p>4</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-toilet"></i>
+                                <p>1</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-car-side"></i>
+                                <p>2</p>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-expand"></i>
+                                <p>77 m²</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                      <div class="featured-card-button-container">
+                        <button class="more-info-button">Mais Informações</button>
+                        <button class="message-button"><i class="fa-regular fa-envelope"></i></button>
+                    </div>
+                </div>
+                <div class="featured-card">
+                <img src="./teste.jpg" class="featured-card-image">
+                <div class="featured-card-tag">DESTAQUE</div>
+                <div class="featured-card-content">
+                    <div class="featured-card-value">R$430.932,00</div>
+                    <h1>Apartamento sem Condomínio Vila Gilda</h1>
+                    <h2>Vila Gilda - Santo André</h2>
+
+                    <div class="card-tag-container-wrapper">
+                        <div class="card-tag-container">
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-bed"></i>
+                                <p>4</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-toilet"></i>
+                                <p>1</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-car-side"></i>
+                                <p>2</p>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-expand"></i>
+                                <p>77 m²</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                      <div class="featured-card-button-container">
+                        <button class="more-info-button">Mais Informações</button>
+                        <button class="message-button"><i class="fa-regular fa-envelope"></i></button>
+                    </div>
+                </div>
+                <div class="featured-card">
+                <img src="./teste.jpg" class="featured-card-image">
+                <div class="featured-card-tag">DESTAQUE</div>
+                <div class="featured-card-content">
+                    <div class="featured-card-value">R$430.932,00</div>
+                    <h1>Apartamento sem Condomínio Vila Gilda</h1>
+                    <h2>Vila Gilda - Santo André</h2>
+                    <div class="card-tag-container-wrapper">
+                        <div class="card-tag-container">
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-bed"></i>
+                                <p>4</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-toilet"></i>
+                                <p>1</p>
+                            </div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-car-side"></i>
+                                <p>2</p>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="tag-wrapper">
+                                <i class="fa-solid fa-expand"></i>
+                                <p>77 m²</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                      <div class="featured-card-button-container">
+                        <button class="more-info-button">Mais Informações</button>
+                        <button class="message-button"><i class="fa-regular fa-envelope"></i></button>
+                    </div>
+                </div>
     </div>
+</div>
